tdf#121978 use round again for Calc function SECOND.

Round was inadvertedly replaced by floor in commit 273b3e10eab70ebc084cb62568bd699fddfb376e.

Change-Id: Ie0824e228c62509952a11b866638482a409c851d
Reviewed-on: https://gerrit.libreoffice.org/65579
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>